abnf/rfc2396.abnf
URI-reference = [ absoluteURI / relativeURI ] [ "#" fragment ]
absoluteURI   = scheme ":" ( hier-part / opaque-part )
relativeURI   = ( net-path / abs-path / rel-path ) [ "?" query ]

hier-part     = ( net-path / abs-path ) [ "?" query ]
opaque-part   = uric-no-slash *uric

uric-no-slash = unreserved / escaped / ";" / "?" / ":" / "@" /
                "&" / "=" / "+" / "$" / ","

net-path      = "//" authority [ abs-path ]
abs-path      = "/"  path-segments
rel-path      = rel-segment [ abs-path ]

rel-segment   = 1*( unreserved / escaped /
                    ";" / "@" / "&" / "=" / "+" / "$" / "," )

scheme        = alpha *( alpha / digit / "+" / "-" / "." )

authority     = server / reg-name

reg-name      = 1*( unreserved / escaped / "$" / "," /
                    ";" / ":" / "@" / "&" / "=" / "+" )

server        = [ [ userinfo "@" ] hostport ]
userinfo      = *( unreserved / escaped /
                   ";" / ":" / "&" / "=" / "+" / "$" / "," )

hostport      = host [ ":" port ]
host          = hostname / IPv4address
hostname      = *( domainlabel "." ) toplabel [ "." ]
domainlabel   = alphanum / alphanum *( alphanum / "-" ) alphanum
toplabel      = alpha / alpha *( alphanum / "-" ) alphanum
IPv4address   = 1*digit "." 1*digit "." 1*digit "." 1*digit
port          = *digit

path          = [ abs-path / opaque-part ]
path-segments = segment *( "/" segment )
segment       = *pchar *( ";" param )
param         = *pchar
pchar         = unreserved / escaped /
                ":" / "@" / "&" / "=" / "+" / "$" / ","

query         = *uric

fragment      = *uric
uric          = reserved / unreserved / escaped
reserved      = ";" / "/" / "?" / ":" / "@" / "&" / "=" / "+" /
                "$" / ","
unreserved    = alphanum / mark
mark          = "-" / "-" / "." / "!" / "~" / "*" / "'" /
                "(" / ")"

escaped       = "%" hex hex
hex           = digit / "A" / "B" / "C" / "D" / "E" / "F" /
                        "a" / "b" / "c" / "d" / "e" / "f"

alphanum      = alpha / digit
alpha         = lowalpha / upalpha

lowalpha = "a" / "b" / "c" / "d" / "e" / "f" / "g" / "h" / "i" /
           "j" / "k" / "l" / "m" / "n" / "o" / "p" / "q" / "r" /
           "s" / "t" / "u" / "v" / "w" / "x" / "y" / "z"
upalpha  = "A" / "B" / "C" / "D" / "E" / "F" / "G" / "H" / "I" /
           "J" / "K" / "L" / "M" / "N" / "O" / "P" / "Q" / "R" /
           "S" / "T" / "U" / "V" / "W" / "X" / "Y" / "Z"
digit    = "0" / "1" / "2" / "3" / "4" / "5" / "6" / "7" /
           "8" / "9"
